--- a/client/main.css
+++ b/client/main.css
@@ -1,3 +1,16 @@
+.container {
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+
+a {
+  text-decoration: none !important;
+  cursor: pointer;
+  font-size: 1.5em;
+  color: red;
+}
+
 #createddate {
   font-size: .7em;
 }
